Implement remaining exercises

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,5 +34,7 @@ if (OPENMP_FOUND)
     set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
 endif()
 target_link_libraries(${APP_NAME} PRIVATE Threads::Threads)
-target_include_directories(${APP_NAME} PRIVATE /home/cybermantid/.local/share/mpich/include)
-target_link_libraries(${APP_NAME} PRIVATE /home/cybermantid/.local/share/mpich/lib/libmpich.so)
+target_include_directories(${APP_NAME} PRIVATE /home/mantis/.local/share/mpich/include/)
+target_link_libraries(${APP_NAME} PRIVATE /home/mantis/.local/share/mpich/lib/libmpich.so)
+
+target_compile_options(${APP_NAME} PRIVATE -Wall -Wextra -Wpedantic)
